REST API: delete transactions
